Remove unused pages and components for the chat App

--- a/app/containers/layouts/index.scss
+++ b/app/containers/layouts/index.scss
@@ -21,6 +21,6 @@
 #page-layout {
   height: 100% !important;
   .ant-layout-content {
-    background-color: lavender;
+    background-color: white;
   }
 }
