Add several layout fixes

--- a/app/app.less
+++ b/app/app.less
@@ -113,17 +113,16 @@ pre {
 }
 
 .ant-divider-inner-text {
-  font-size: 18px;
   font-weight: 600;
-  color: @teal;
+  color: @rich-black;
 }
 
 .ant-divider-horizontal.ant-divider-with-text-left {
   &:before {
-    border-top-color: rgba(239, 98, 108, 0.5);
+    border-top-color: #000000;
   }
   &:after {
-    border-top-color: rgba(239, 98, 108, 0.5);
+    border-top-color: #000000;
   }
 }
 
